methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value vuBiscuit
  if (vuBiscuit() == true) {
      ^MethodsReturning:13: error: not found: value bacward
      bacward();
      ^MethodsReturning:17: error: not found: value bacward
      bacward();
      ^